# renderer-project

./: CMakeLists.txt  DESIGN.md  README.md  metadata.yml
inputs/: CS50duck.txt  cube.txt  remy.txt  sphere.txt  statueOfLiberty.txt  tree.txt
libs/: libsfml-audio.2.6.2.dylib  libsfml-graphics.2.6.2.dylib  libsfml-network.2.6.2.dylib  libsfml-system.2.6.2.dylib  libsfml-window.2.6.2.dylib
src/: InputHandler.cpp  InputHandler.h  LinAlg.cpp  LinAlg.h  Rasterizer.cpp  Rasterizer.h  main.cpp
